force-app/main/default/objects/Campaign/fields/AutoAssignCalls__c.field-meta.xml
<CustomField>
    <fullName>AutoAssignCalls__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto-Assign Calls</label>
    <type>Checkbox</type>
</CustomField>