force-app/main/default/objects/Campaign/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Key Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elecare</fullName>
            </value>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Ensure Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Flexifo</fullName>
            </value>
            <value>
                <fullName>Freego</fullName>
            </value>
            <value>
                <fullName>Glucerna</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>IMF</fullName>
            </value>
            <value>
                <fullName>Jevity</fullName>
            </value>
            <value>
                <fullName>Multi-Brand</fullName>
            </value>
            <value>
                <fullName>Pediasure</fullName>
            </value>
            <value>
                <fullName>Similac</fullName>
            </value>
            <value>
                <fullName>Similac Core</fullName>
            </value>
            <value>
                <fullName>Similac Mom</fullName>
            </value>
            <value>
                <fullName>Similac Total Comfort</fullName>
            </value>
            <value>
                <fullName>Nepro</fullName>
            </value>
            <value>
                <fullName>Osmolite</fullName>
            </value>
            <value>
                <fullName>RCF</fullName>
            </value>
            <value>
                <fullName>Twocal</fullName>
            </value>
            <value>
                <fullName>Vital 1.5Kcal</fullName>
            </value>
            <value>
                <fullName>Other MND</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Isomil</fullName>
            </value>
            <value>
                <fullName>Prosure</fullName>
            </value>
            <value>
                <fullName>Nepro HP</fullName>
                <isActive>false</isActive>
                <label>Nepro HP</label>
            </value>
            <value>
                <fullName>Nepro LP</fullName>
                <isActive>false</isActive>
                <label>Nepro LP</label>
            </value>
            <value>
                <fullName>Similac 3</fullName>
                <isActive>false</isActive>
                <label>Similac 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>