force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>