force-app/main/default/objects/Campaign/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Data Source</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Campaigns (Data Source)</relationshipLabel>
    <relationshipName>CampaignDataSources</relationshipName>
    <type>Lookup</type>
</CustomField>