force-app/main/default/objects/Campaign/fields/External_Call_Execution__c.field-meta.xml
<CustomField>
    <fullName>External_Call_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Call Execution</label>
    <type>Checkbox</type>
</CustomField>