force-app/main/default/objects/Campaign/fields/ExternalCampaignReference__c.field-meta.xml
<CustomField>
    <fullName>ExternalCampaignReference__c</fullName>
    <description>External campaign reference for tagging with Salesforce ID</description>
    <externalId>true</externalId>
    <label>External Campaign Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>