force-app/main/default/objects/Campaign/fields/ExternalReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferenceNumber__c</fullName>
    <label>External Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>