force-app/main/default/objects/Campaign/fields/Highest_Priority__c.field-meta.xml
<CustomField>
    <fullName>Highest_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highest Priority</label>
    <type>Checkbox</type>
</CustomField>