force-app/main/default/objects/Campaign/fields/MC_TH_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_TH_Sync_Eligibility__c</fullName>
    <formula>ispickval(Market__c, &apos;TH&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC TH Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>