force-app/main/default/objects/Campaign/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>Objectives of the campaign</description>
    <label>Objective</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>