force-app/main/default/objects/Campaign/fields/PromotionCode__c.field-meta.xml
<CustomField>
    <fullName>PromotionCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Code</label>
    <referenceTo>PromotionCode__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>