force-app/main/default/objects/Campaign/fields/SalesCall__c.field-meta.xml
<CustomField>
    <fullName>SalesCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Call</label>
    <type>Checkbox</type>
</CustomField>