force-app/main/default/objects/Campaign/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Types of channel</description>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Ethical</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Other - Online</fullName>
            </value>
            <value>
                <fullName>Other - Offline</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Inbound Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>